@@ -57,7 +57,7 @@
 					<onup>SetFocus(83,0)</onup>
 					<!--<ondown condition="Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3) | [Container(525).HasFocus(7) + !IsEmpty(Window(Home).Property(MostPlayedROM.1.Title)) + Skin.HasSetting(UseRCB)]">SetFocus(82)</ondown>-->
 					<ondown condition="[Container(525).HasFocus(3) + !stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(7) + !IsEmpty(Window(Home).Property(MostPlayedROM.1.Title)) + Skin.HasSetting(UseRCB)] | [Container(525).HasFocus(1) + !stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + !stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])]">SetFocus(82)</ondown>
-					<ondown condition="[Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])]">SetFocus(90)</ondown>
+					<ondown condition="[Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])]">SetFocus(89)</ondown>
 					<ondown condition="Container(525).HasFocus(9) | Container(525).HasFocus(10) | Container(525).HasFocus(11)">SetFocus(84,0)</ondown>
 					<ondown condition="Container(525).HasFocus(4) | Container(525).HasFocus(5) | Container(525).HasFocus(6) | [Container(525).HasFocus(7) + [IsEmpty(Window(Home).Property(MostPlayedROM.1.Title)) | !Skin.HasSetting(UseRCB)]] | Container(525).HasFocus(8)">SetFocus(84,0)</ondown>
 
